# dnd-architecture

./: README.md  pyproject.toml
src/entities/: abilities.py  character.py  skills.py
src/entities/enums/: races.py  skills.py
src/mechanics/character/: builder.py
tests/entities/: abilities.py
tests/test_entities/: test_abilities.py  test_skills.py
tests/test_mechanics/test_character/: test_builders.py
