[tool.poetry]
name = "dnd-architecture"
version = "0.1.0"
description = ""
authors = ["Vasilii Kuimov <vasilykuimov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
parameterized = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
